fix, update enum, jwt